[package]
name = "os"
version = "0.1.0"
authors = ["krista-chan <qbotdev84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.17"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.3"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["build"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 5

[[test]]
name = "should_panic"
harness = false
